POC: copy entity
