# src/main/scala/org/broadinstitute/dsde/agora/server/business/AgoraBusiness.scala
@@ -197,6 +197,44 @@ class AgoraBusiness(permissionsDataSource: PermissionsDataSource)(implicit ec: E
     }
   }
 
+  def copy(oldEntity: AgoraEntity, newEntity: AgoraEntity, redact: Boolean, entityTypes: Seq[AgoraEntityType.EntityType], username: String): Future[AgoraEntity] = {
+
+    // get source
+    findSingle(oldEntity, entityTypes, username) flatMap { sourceEntity =>
+      // insert target
+      // munge the object we're inserting to be a copy of the source plus overrides from the new
+      // TODO: should we allow override of anything other than synopsis, doc, and payload?
+      val insertEntity = AgoraEntity(
+                        namespace = sourceEntity.namespace,
+                        name = sourceEntity.name,
+                        synopsis = if (newEntity.synopsis.isDefined) newEntity.synopsis else sourceEntity.synopsis,
+                        documentation = if (newEntity.documentation.isDefined) newEntity.documentation else sourceEntity.documentation,
+                        payload = if (newEntity.payload.isDefined) newEntity.payload else sourceEntity.payload,
+                        entityType=sourceEntity.entityType
+                        )
+      insert(insertEntity, username) flatMap { targetEntity =>
+        permissionsDataSource.inTransaction { db =>
+          // get source permissions
+          db.aePerms.listEntityPermissions(sourceEntity) flatMap { sourcePerms =>
+            // TODO: do we need to remove the default owner permission of the newly-inserted snapshot?
+            // copy source permissions to target
+            DBIO.sequence(sourcePerms map {db.aePerms.insertEntityPermission(targetEntity, _)}) flatMap { ins =>
+              // do we need to redact the old snapshot?
+              val redactFuture = if (redact) {
+                DBIO.from(delete(sourceEntity, Seq(sourceEntity.entityType.get), username))
+              } else {
+                DBIO.successful(0)
+              }
+              redactFuture flatMap { _ =>
+                DBIO.successful(targetEntity)
+              }
+            }
+          }
+        }
+      }
+    }
+  }
+
   def find(agoraSearch: AgoraEntity,
            agoraProjection: Option[AgoraEntityProjection],
            entityTypes: Seq[AgoraEntityType.EntityType],
